some unfinished bracket work, to be completed

--- a/bracket.html
+++ b/bracket.html
@@ -46,7 +46,7 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-0-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -54,12 +54,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-0-1">&#160;&#160;</td>
 <td rowspan="6" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-0-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -68,12 +68,12 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="12" class="line two-borders">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-0-1">&#160;&#160;</td>
 <td rowspan="12" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-1-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -82,12 +82,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-1-1">&#160;&#160;</td>
 <td rowspan="6" class="line two-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="sf-0-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -96,12 +96,12 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="24" class="line two-borders">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="sf-0-1">&#160;&#160;</td>
 <td rowspan="24" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-4-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -110,12 +110,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-4-1">&#160;&#160;</td>
 <td rowspan="6" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-2-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -124,12 +124,12 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="12" class="line two-borders">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-2-1">&#160;&#160;</td>
 <td rowspan="12" class="line two-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-5-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -138,12 +138,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-5-1">&#160;&#160;</td>
 <td rowspan="6" class="line two-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="F-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -152,11 +152,11 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="23" class="line from-below">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="F-1">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-2-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -165,12 +165,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-2-1">&#160;&#160;</td>
 <td rowspan="6" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-1-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -179,12 +179,12 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="12" class="line two-borders">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-1-1">&#160;&#160;</td>
 <td rowspan="12" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-3-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -193,12 +193,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-3-1">&#160;&#160;</td>
 <td rowspan="6" class="line two-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="sf-1-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -207,12 +207,12 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="11" class="line from-below">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="sf-1-1">&#160;&#160;</td>
 <td rowspan="11" class="line from-below">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-6-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -222,12 +222,12 @@
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-6-1">&#160;&#160;</td>
 <td rowspan="6" class="line three-borders">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-3-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
@@ -236,22 +236,27 @@
 <tr>
 <td class="hs"></td>
 <td rowspan="5" class="line from-below">&#160;</td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="qf-3-1">&#160;&#160;</td>
 <td rowspan="5" class="line from-below">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-7-0">&#160;&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="3"></td>
-<td rowspan="3"></td>
+<td rowspan="2">&#160;</td>
+<td rowspan="2">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
-<td rowspan="2" style="border:1px solid #aaa;" bgcolor="#F9F9F9">&#160;&#160;</td>
+<td rowspan="2" class="team-cell" id="r16-7-1">&#160;&#160;</td>
 <td rowspan="2" class="line from-below">&#160;</td>
+</tr>
+<tr>
+<td class="hs"></td>
+<td rowspan="2">&#160;</td>
+<td rowspan="2">&#160;</td>
 </tr>
 <tr>
 <td class="hs"></td>
