pre-testing!! (couple fixes plus complicated stuff commented out)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="tab-content">
 		</div>
 	</div>
+	<script src="groupStatus.js"></script>
 	<script src="world_cup.js"></script>
 	<script>
 		for (var i = 0; i < 8; i++) {
