--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<div class="tab-content">
 		</div>
 	</div>
+	<div id="buttons">
+		<input type="button" id="save" value="Save scores"/>
+	</div>
 	<script src="groupStatus.js"></script>
 	<script src="world_cup.js"></script>
 	<script>
