--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 	<script src="loader.js"></script>
 	<script>
 		for (var i = 0; i < 8; i++) {
-			var groupTab = '<li><a href="#'+2014_Brazil.groups[i].id+'">'+
-								'<img src="flags/'+2014_Brazil.groups[i].teams[0].id+'.png">'+
-								'<img src="flags/'+2014_Brazil.groups[i].teams[1].id+'.png">'+
-								2014_Brazil.groups[i].id+
-								'<img src="flags/'+2014_Brazil.groups[i].teams[2].id+'.png">'+
-								'<img src="flags/'+2014_Brazil.groups[i].teams[3].id+'.png">'+
+			var groupTab = '<li><a href="#'+Brazil2014.groups[i].id+'">'+
+								'<img src="flags/'+Brazil2014.groups[i].teams[0].id+'.png">'+
+								'<img src="flags/'+Brazil2014.groups[i].teams[1].id+'.png">'+
+								Brazil2014.groups[i].id+
+								'<img src="flags/'+Brazil2014.groups[i].teams[2].id+'.png">'+
+								'<img src="flags/'+Brazil2014.groups[i].teams[3].id+'.png">'+
 						   '</a></li>';
 			$('.tab-links').append(groupTab);
-			var groupContent = '<div id="'+2014_Brazil.groups[i].id+'" class="tab">'+
+			var groupContent = '<div id="'+Brazil2014.groups[i].id+'" class="tab">'+
 								'<div class="matches"></div>'+
 								'<div class="groupTable"></div>'+
 						   '</div>';
 			$('.tab-content').append(groupContent);
-			2014_Brazil.groups[i].drawMatches();
-			2014_Brazil.groups[i].firstTable();
+			Brazil2014.groups[i].drawMatches();
+			Brazil2014.groups[i].firstTable();
 		}
         $('.tabs .tab-links a').on('click', function(e)  {
             var currentAttrValue = $(this).attr('href');
@@ -52,7 +52,7 @@
         });
 		$(document).on('blur', '.score1, .score2', function() {
 			var groupIndex = $(this).parents('.tab').attr('id').charCodeAt(0)-65;
-			2014_Brazil.groups[groupIndex].play($(this).parents(".matchRow").attr('class')[5], $(this).parent(".result").children(".score1").val(), $(this).parent(".result").children(".score2").val());
+			Brazil2014.groups[groupIndex].play($(this).parents(".matchRow").attr('class')[5], $(this).parent(".result").children(".score1").val(), $(this).parent(".result").children(".score2").val());
 		});
 		$("#buttons").on('click', "#save", function() {
 			readAll();
