--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 	</div>
 	<div id="buttons">
 		<input type="button" id="save" value="Save scores"/>
-		<input type="button" id="load" value="Load scores"/>
+		<input type="button" id="load" value="Load scores"/><br>
+		<input type="button" id="resetOne" value="Reset group to real scores"/>
+		<input type="button" id="blankOne" value="Reset group to blank"/><br>
+		<input type="button" id="resetAll" value="Reset tournament to real scores"/>
+		<input type="button" id="blankAll" value="Reset tournament to blank"/>
 	</div>
 	<script src="main.js"></script>
 	<script src="groupUtils.js"></script>
@@ -23,9 +27,10 @@
 	<script src="match.js"></script>
 	<script src="team.js"></script>
 	<script>
-		NAMES = ["Brazil", "Croatia", "Mexico", "Cameroon", "Spain", "Netherlands", "Chile", "Australia", "Colombia", "Greece", "Ivory Coast", "Japan", "Uruguay", "Costa Rica", "England", "Italy", "Switzerland", "Ecuador", "France", "Honduras", "Argentina", "Bosnia & Herz.", "Iran", "Nigeria", "Germany", "Portugal", "Ghana", "United States", "Belgium", "Algeria", "Russia", "Korea Republic"];
-		MATCH_DETAILS = new Array(48);
-		Brazil2014.init(NAMES, MATCH_DETAILS);
+		var NAMES = ["Brazil", "Croatia", "Mexico", "Cameroon", "Spain", "Netherlands", "Chile", "Australia", "Colombia", "Greece", "Ivory Coast", "Japan", "Uruguay", "Costa Rica", "England", "Italy", "Switzerland", "Ecuador", "France", "Honduras", "Argentina", "Bosnia & Herz.", "Iran", "Nigeria", "Germany", "Portugal", "Ghana", "United States", "Belgium", "Algeria", "Russia", "Korea Republic"];
+		var MATCH_DETAILS = new Array(48);
+		var SCORES = '13100004----15210223----30212100----13122101----21302512----21001010----401222------211110------';
+		Brazil2014.init(NAMES, MATCH_DETAILS, SCORES);
 		
 		$('.tabs #A').show();
 		$('.tabs .tab-links a').first().parent('li').addClass('active');
@@ -46,10 +51,24 @@
 			Brazil2014.groups[groupIndex].play($(this).parents(".matchRow").attr('class')[5], $(this).parent(".result").children(".score1").val(), $(this).parent(".result").children(".score2").val());
 		});
 		$("#buttons").on('click', "#save", function() {
-			readAll();
+			Brazil2014.save();
 		});
 		$("#buttons").on('click', "#load", function() {
-			loadTournament();
+			Brazil2014.load('');
+		});
+		$("#buttons").on('click', "#resetOne", function() {
+			var g = $('.tabs .tab-links .active a').attr('href').charCodeAt(1)-65;
+			Brazil2014.groups[g].load(Brazil2014.realScores.substring(g*12, g*12+12));
+		});
+		$("#buttons").on('click', "#resetAll", function() {
+			Brazil2014.load(Brazil2014.realScores);
+		});
+		$("#buttons").on('click', "#blankOne", function() {
+			var g = $('.tabs .tab-links .active a').attr('href').charCodeAt(1)-65;
+			Brazil2014.groups[g].load('------------');
+		});
+		$("#buttons").on('click', "#blankAll", function() {
+			Brazil2014.load('------------------------------------------------------------------------------------------------');
 		});
 	</script>
 </body>
