--- a/bracket.html
+++ b/bracket.html
@@ -5,262 +5,262 @@
 </head>
 <body>
 <table border="0" cellpadding="0" cellspacing="0" style="font-size: 90%; margin:1em 2em 1em 1em;">
-<tr>
-<td class="hs"></td>
-<td class="round">Round of 16</td>
-<td colspan="2"></td>
-<td class="round">Quarter-finals</td>
-<td colspan="2"></td>
-<td class="round">Semi-finals</td>
-<td colspan="2"></td>
-<td class="round">Final</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td width="180">&#160;</td>
-<td width="15">&#160;</td>
-<td width="20">&#160;</td>
-<td width="180">&#160;</td>
-<td width="15">&#160;</td>
-<td width="20">&#160;</td>
-<td width="180">&#160;</td>
-<td width="15">&#160;</td>
-<td width="20">&#160;</td>
-<td width="180">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-<td rowspan="4" class="line from-above">&#160;</td>
-<td rowspan="7" class="line from-above">&#160;</td>
-<td rowspan="3"></td>
-<td rowspan="7" class="line from-above">&#160;</td>
-<td rowspan="13" class="line from-above">&#160;</td>
-<td rowspan="9"></td>
-<td rowspan="13" class="line from-above">&#160;</td>
-<td rowspan="25" class="line from-above">&#160;</td>
-<td rowspan="21"></td>
-</tr>
-<tr>
-<td class="hs"></td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-0-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-0-1">&#160;&#160;</td>
-<td rowspan="6" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="qf-0-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="12" class="line two-borders">&#160;</td>
-<td rowspan="2" class="team-cell" id="qf-0-1">&#160;&#160;</td>
-<td rowspan="12" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-1-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="6"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-1-1">&#160;&#160;</td>
-<td rowspan="6" class="line two-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="sf-0-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="24" class="line two-borders">&#160;</td>
-<td rowspan="2" class="team-cell" id="sf-0-1">&#160;&#160;</td>
-<td rowspan="24" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-4-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-<td rowspan="18"></td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-4-1">&#160;&#160;</td>
-<td rowspan="6" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="qf-2-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="12" class="line two-borders">&#160;</td>
-<td rowspan="2" class="team-cell" id="qf-2-1">&#160;&#160;</td>
-<td rowspan="12" class="line two-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-5-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="6"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-5-1">&#160;&#160;</td>
-<td rowspan="6" class="line two-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="F-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="23" class="line from-below">&#160;</td>
-<td rowspan="2" class="team-cell" id="F-1">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-2-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-<td rowspan="10"></td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-2-1">&#160;&#160;</td>
-<td rowspan="6" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="qf-1-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="12" class="line two-borders">&#160;</td>
-<td rowspan="2" class="team-cell" id="qf-1-1">&#160;&#160;</td>
-<td rowspan="12" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-3-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="6"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-3-1">&#160;&#160;</td>
-<td rowspan="6" class="line two-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="sf-1-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="11" class="line from-below">&#160;</td>
-<td rowspan="2" class="team-cell" id="sf-1-1">&#160;&#160;</td>
-<td rowspan="11" class="line from-below">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-6-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-<td rowspan="9"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-6-1">&#160;&#160;</td>
-<td rowspan="6" class="line three-borders">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="qf-3-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="5" class="line from-below">&#160;</td>
-<td rowspan="2" class="team-cell" id="qf-3-1">&#160;&#160;</td>
-<td rowspan="5" class="line from-below">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-7-0">&#160;&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2" class="team-cell" id="r16-7-1">&#160;&#160;</td>
-<td rowspan="2" class="line from-below">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-<td rowspan="2">&#160;</td>
-<td rowspan="2">&#160;</td>
-</tr>
-<tr>
-<td class="hs"></td>
-</tr>
+	<tr>
+		<td class="hs"></td>
+		<td class="round">Round of 16</td>
+		<td colspan="2"></td>
+		<td class="round">Quarter-finals</td>
+		<td colspan="2"></td>
+		<td class="round">Semi-finals</td>
+		<td colspan="2"></td>
+		<td class="round">Final</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td width="180">&#160;</td>
+		<td width="15">&#160;</td>
+		<td width="20">&#160;</td>
+		<td width="180">&#160;</td>
+		<td width="15">&#160;</td>
+		<td width="20">&#160;</td>
+		<td width="180">&#160;</td>
+		<td width="15">&#160;</td>
+		<td width="20">&#160;</td>
+		<td width="180">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+		<td rowspan="4" class="line from-above">&#160;</td>
+		<td rowspan="7" class="line from-above">&#160;</td>
+		<td rowspan="3"></td>
+		<td rowspan="7" class="line from-above">&#160;</td>
+		<td rowspan="13" class="line from-above">&#160;</td>
+		<td rowspan="9"></td>
+		<td rowspan="13" class="line from-above">&#160;</td>
+		<td rowspan="25" class="line from-above">&#160;</td>
+		<td rowspan="21"></td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m0-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m0-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r1-m0-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="12" class="line two-borders">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r0-m0-t1">&#160;&#160;</td>
+		<td rowspan="12" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m1-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="6"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m1-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line two-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r2-m0-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="24" class="line two-borders">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r2-m0-t1">&#160;&#160;</td>
+		<td rowspan="24" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m2-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+		<td rowspan="18"></td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m2-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r1-m1-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="12" class="line two-borders">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r1-m1-t1">&#160;&#160;</td>
+		<td rowspan="12" class="line two-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m3-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="6"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m3-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line two-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r3-m0-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="23" class="line from-below">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r3-m0-t1">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m4-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+		<td rowspan="10"></td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m4-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r1-m2-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="12" class="line two-borders">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r1-m2-t1">&#160;&#160;</td>
+		<td rowspan="12" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m5-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="6"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m5-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line two-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r3-m1-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="11" class="line from-below">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r3-m1-t1">&#160;&#160;</td>
+		<td rowspan="11" class="line from-below">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m6-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+		<td rowspan="9"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m6-t1">&#160;&#160;</td>
+		<td rowspan="6" class="line three-borders">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r1-m3-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="5" class="line from-below">&#160;</td>
+		<td rowspan="2" class="team-cell" id="r1-m3-t1">&#160;&#160;</td>
+		<td rowspan="5" class="line from-below">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m7-t0">&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2" class="team-cell" id="r0-m7-t1">&#160;&#160;</td>
+		<td rowspan="2" class="line from-below">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+		<td rowspan="2">&#160;</td>
+		<td rowspan="2">&#160;</td>
+	</tr>
+	<tr>
+		<td class="hs"></td>
+	</tr>
 </table>
 </body>
 </html>
