--- a/index.html
+++ b/index.html
@@ -8,9 +8,270 @@
 <body>
 	<div class="tabs">
 		<ul class="tab-links">
+			<li><a href="#Bracket">Knockout</a></li>
 		</ul>
 		
 		<div class="tab-content">
+			<div id="Bracket" class="tab">
+				<table border="0" cellpadding="0" cellspacing="0" style="font-size: 90%; margin:1em 2em 1em 1em;">
+					<tr>
+						<td class="hs"></td>
+						<td class="round">Round of 16</td>
+						<td colspan="2"></td>
+						<td class="round">Quarter-finals</td>
+						<td colspan="2"></td>
+						<td class="round">Semi-finals</td>
+						<td colspan="2"></td>
+						<td class="round">Final</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td width="180">&#160;</td>
+						<td width="15">&#160;</td>
+						<td width="20">&#160;</td>
+						<td width="180">&#160;</td>
+						<td width="15">&#160;</td>
+						<td width="20">&#160;</td>
+						<td width="180">&#160;</td>
+						<td width="15">&#160;</td>
+						<td width="20">&#160;</td>
+						<td width="180">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+						<td rowspan="4" class="line from-above">&#160;</td>
+						<td rowspan="7" class="line from-above">&#160;</td>
+						<td rowspan="3"></td>
+						<td rowspan="7" class="line from-above">&#160;</td>
+						<td rowspan="13" class="line from-above">&#160;</td>
+						<td rowspan="9"></td>
+						<td rowspan="13" class="line from-above">&#160;</td>
+						<td rowspan="25" class="line from-above">&#160;</td>
+						<td rowspan="21"></td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m0-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m0-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r1-m0-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="12" class="line two-borders">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r0-m0-t1">&#160;&#160;</td>
+						<td rowspan="12" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m1-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="6"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m1-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line two-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r2-m0-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="24" class="line two-borders">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r2-m0-t1">&#160;&#160;</td>
+						<td rowspan="24" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m2-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+						<td rowspan="18"></td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m2-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r1-m1-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="12" class="line two-borders">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r1-m1-t1">&#160;&#160;</td>
+						<td rowspan="12" class="line two-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m3-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="6"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m3-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line two-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r3-m0-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="23" class="line from-below">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r3-m0-t1">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m4-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+						<td rowspan="10"></td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m4-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r1-m2-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="12" class="line two-borders">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r1-m2-t1">&#160;&#160;</td>
+						<td rowspan="12" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m5-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="6"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m5-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line two-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r3-m1-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="11" class="line from-below">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r3-m1-t1">&#160;&#160;</td>
+						<td rowspan="11" class="line from-below">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m6-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+						<td rowspan="9"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m6-t1">&#160;&#160;</td>
+						<td rowspan="6" class="line three-borders">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r1-m3-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="5" class="line from-below">&#160;</td>
+						<td rowspan="2" class="team-cell" id="r1-m3-t1">&#160;&#160;</td>
+						<td rowspan="5" class="line from-below">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m7-t0">&#160;&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2" class="team-cell" id="r0-m7-t1">&#160;&#160;</td>
+						<td rowspan="2" class="line from-below">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+						<td rowspan="2">&#160;</td>
+						<td rowspan="2">&#160;</td>
+					</tr>
+					<tr>
+						<td class="hs"></td>
+					</tr>
+				</table>
+			</div>
 		</div>
 	</div>
 	<div id="buttons">
@@ -22,6 +283,7 @@
 		<input type="button" id="blankAll" value="Reset tournament to blank"/>
 	</div>
 	<script src="main.js"></script>
+	<script src="bracket.js"></script>
 	<script src="groupUtils.js"></script>
 	<script src="group.js"></script>
 	<script src="match.js"></script>
@@ -29,7 +291,7 @@
 	<script>
 		var NAMES = ["Brazil", "Croatia", "Mexico", "Cameroon", "Spain", "Netherlands", "Chile", "Australia", "Colombia", "Greece", "Ivory Coast", "Japan", "Uruguay", "Costa Rica", "England", "Italy", "Switzerland", "Ecuador", "France", "Honduras", "Argentina", "Bosnia & Herz.", "Iran", "Nigeria", "Germany", "Portugal", "Ghana", "United States", "Belgium", "Algeria", "Russia", "Korea Republic"];
 		var MATCH_DETAILS = [["Arena de Sao Paulo, Sao Paulo", [5,12,20,0]],["Arena das Dunas, Natal", [5,13,16,0]],["Arena Fonte Nova, Salvador", [5,13,19,0]],["Arena Pantanal, Cuiaba", [5,13,22,0]],["Estadio Mineirao, Belo Horizonte", [5,14,16,0]],["Arena Pernambuco, Recife", [5,15,1,0]],["Estadio Castelao, Fortaleza", [5,14,19,0]],["Arena Amazonia, Manaus", [5,14,22,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,15,16,0]],["Estadio Beira-Rio, Porto Alegre", [5,15,19,0]],["Estadio do Maracana, Rio de Janeiro", [5,15,22,0]],["Arena da Baixada, Curitiba", [5,16,19,0]],["Arena Fonte Nova, Salvador", [5,16,16,0]],["Arena das Dunas, Natal", [5,16,22,0]],["Estadio Mineirao, Belo Horizonte", [5,17,16,0]],["Arena Pantanal, Cuiaba", [5,17,22,0]],["Estadio Castelao, Fortaleza", [5,17,19,0]],["Arena Amazonia, Manaus", [5,18,22,0]],["Estadio do Maracana, Rio de Janeiro", [5,18,19,0]],["Estadio Beira-Rio, Porto Alegre", [5,18,16,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,19,16,0]],["Arena das Dunas, Natal", [5,19,22,0]],["Arena de Sao Paulo, Sao Paulo", [5,19,19,0]],["Arena Pernambuco, Recife", [5,20,16,0]],["Arena Fonte Nova, Salvador", [5,20,19,0]],["Arena da Baixada, Curitiba", [5,20,22,0]],["Estadio Mineirao, Belo Horizonte", [5,21,16,0]],["Arena Pantanal, Cuiaba", [5,21,22,0]],["Estadio Castelao, Fortaleza", [5,21,19,0]],["Arena Amazonia, Manaus", [5,22,22,0]],["Estadio do Maracana, Rio de Janeiro", [5,22,16,0]],["Estadio Beira-Rio, Porto Alegre", [5,22,19,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,23,20,0]],["Arena Pernambuco, Recife", [5,23,20,0]],["Arena da Baixada, Curitiba", [5,23,16,0]],["Arena de Sao Paulo, Sao Paulo", [5,23,16,0]],["Arena Pantanal, Cuiaba", [5,24,20,0]],["Estadio Castelao, Fortaleza", [5,24,20,0]],["Arena das Dunas, Natal", [5,24,16,0]],["Estadio Mineirao, Belo Horizonte", [5,24,16,0]],["Arena Amazonia, Manaus", [5,25,20,0]],["Estadio do Maracana, Rio de Janeiro", [5,25,20,0]],["Estadio Beira-Rio, Porto Alegre", [5,25,16,0]],["Arena Fonte Nova, Salvador", [5,26,16,0]],["Arena Pernambuco, Recife", [5,26,16,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,26,16,0]],["Arena de Sao Paulo, Sao Paulo", [5,26,20,0]],["Arena da Baixada, Curitiba", [5,26,20,0]]];
-		var SCORES = '31100004----15310223032030212100----13122101----21302512----21001010----401222------21111024----';
+		var SCORES = '311000041413152102230320302121001421131221010100213025120300210010102331401222220121211110240111';
 		Brazil2014.init(NAMES, MATCH_DETAILS, SCORES);
 		
 		$('.tabs #A').show();
@@ -37,6 +299,10 @@
 		
         $('.tabs .tab-links a').on('click', function(e)  {
             var currentAttrValue = $(this).attr('href');
+            
+            if (currentAttrValue === "#Bracket") {
+            	Brazil2014.populateBracket();
+            }
      
             // Show/Hide Tabs
             $('.tabs ' + currentAttrValue).show().siblings().hide();
