drawing the bracket works

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <title> FIFA World Cup 2014 - Choose Your Own Adventure</title>
 <link rel='stylesheet' href='world_cup.css' />
 <link rel='stylesheet' href='tabs.css' />
+<link rel='stylesheet' href='bracket.css' />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
 </head>
 <body>
 	<div class="tabs">
 		<ul class="tab-links">
+			<div id="group-tab-links"></div>
 			<li><a href="#Bracket">Knockout</a></li>
 		</ul>
 		
 		<div class="tab-content">
+			<div id="group-tab-content"></div>
 			<div id="Bracket" class="tab">
 				<table border="0" cellpadding="0" cellspacing="0" style="font-size: 90%; margin:1em 2em 1em 1em;">
 					<tr>
