--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 	</div>
 	<script src="main.js"></script>
 	<script src="bracket.js"></script>
+	<script src="encodeUtils.js"></script>
 	<script src="groupUtils.js"></script>
 	<script src="group.js"></script>
 	<script src="match.js"></script>
