before screwing with tab display

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
 </head>
 <body>
+	<img class="border" id="top-left" src="borders/top-left.png">
+	<img class="border" id="top-right" src="borders/top-right.png">
+	<img class="border" id="bottom-left" src="borders/bottom-left.png">
+	<img class="border" id="bottom-right" src="borders/bottom-right.png">
 	<div class="tabs">
 		<ul class="tab-links">
 			<div id="group-tab-links"></div>
