before adding champion box

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 	<img class="border" id="top-right" src="borders/top-right.png">
 	<img class="border" id="bottom-left" src="borders/bottom-left.png">
 	<img class="border" id="bottom-right" src="borders/bottom-right.png">
+	<div id="header">
+		<h1>2014 FIFA World Cup Brazil</h1>
+		<p>Set or change match scores to see their effects on the table!</p>
+	</div>
 	<div class="tabs">
-		<ul class="tab-links">
+		<div class="tab-links">
 			<div id="group-tab-links"></div>
-			<li><a href="#Bracket">Knockout</a></li>
-		</ul>
+			<div><a href="#Bracket">Knockout</a></div>
+		</div>
 		
 		<div class="tab-content">
 			<div id="group-tab-content"></div>
