--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="tab-content">
 			<div id="group-tab-content"></div>
 			<div id="Bracket" class="tab">
-				<table border="0" cellpadding="0" cellspacing="0" style="font-size: 90%; margin:1em 2em 1em 1em;">
+				<table border="0" cellpadding="0" cellspacing="0" style="font-size: 90%; margin:1em 2em 1em 1em; display:inline-block; vertical-align:middle;">
 					<tr>
 						<td class="hs"></td>
 						<td class="round">Round of 16</td>
@@ -282,6 +282,7 @@
 						<td class="hs"></td>
 					</tr>
 				</table>
+				<div id="r4-m0-t0" class="champion">Champions<img class=flag src=''><p class="countryName">Brazil</p></div>
 			</div>
 		</div>
 	</div>
