adding drop shadows

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 						<td class="hs"></td>
 					</tr>
 				</table>
-				<div id="r4-m0-t0" class="champion">Champions<img class=flag src=''><p class="countryName">Brazil</p></div>
+				<div id="r4-m0-t0" class="champion"><p>Champions</p><img class=flag src=''><p class="countryName"></p></div>
 			</div>
 		</div>
 	</div>
