--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             $('.tabs ' + currentAttrValue).show().siblings().hide();
      
             // Change/remove current tab to active
-            $(this).parent('li').addClass('active').siblings().removeClass('active');
+            $(this).parent('div').addClass('active').siblings().removeClass('active');
      
             e.preventDefault();
         });
