content vertically aligned in tables

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div id="Bracket" class="tab">
 				<table border="0" cellpadding="0" cellspacing="0" style="font-size: 90%; margin:1em 2em 1em 1em; display:inline-block; vertical-align:middle;">
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td class="round">Round of 16</td>
 						<td colspan="2"></td>
 						<td class="round">Quarter-finals</td>
@@ -78,7 +78,7 @@
 						<td class="round">Final</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td width="180">&#160;</td>
 						<td width="15">&#160;</td>
 						<td width="20">&#160;</td>
@@ -91,7 +91,7 @@
 						<td width="180">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 						<td rowspan="4" class="line from-above">&#160;</td>
 						<td rowspan="7" class="line from-above">&#160;</td>
@@ -104,224 +104,224 @@
 						<td rowspan="21"></td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m0-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m0-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r1-m0-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="12" class="line two-borders">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r1-m0-t1">&#160;&#160;</td>
 						<td rowspan="12" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m1-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="6"></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m1-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line two-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r2-m0-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="24" class="line two-borders">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r2-m0-t1">&#160;&#160;</td>
 						<td rowspan="24" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m2-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 						<td rowspan="18"></td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m2-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r1-m1-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="12" class="line two-borders">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r1-m1-t1">&#160;&#160;</td>
 						<td rowspan="12" class="line two-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m3-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="6"></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m3-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line two-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r3-m0-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="23" class="line from-below">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r3-m0-t1">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m4-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 						<td rowspan="10"></td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m4-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r1-m2-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="12" class="line two-borders">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r1-m2-t1">&#160;&#160;</td>
 						<td rowspan="12" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m5-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="6"></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m5-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line two-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r2-m1-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="11" class="line from-below">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r2-m1-t1">&#160;&#160;</td>
 						<td rowspan="11" class="line from-below">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m6-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 						<td rowspan="9"></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m6-t1">&#160;&#160;</td>
 						<td rowspan="6" class="line three-borders">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r1-m3-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="5" class="line from-below">&#160;</td>
 						<td rowspan="2" class="team-cell" id="r1-m3-t1">&#160;&#160;</td>
 						<td rowspan="5" class="line from-below">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m7-t0">&#160;&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2" class="team-cell" id="r0-m7-t1">&#160;&#160;</td>
 						<td rowspan="2" class="line from-below">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 						<td rowspan="2">&#160;</td>
 						<td rowspan="2">&#160;</td>
 					</tr>
 					<tr>
-						<td class="hs"></td>
+						<td class="hs"><div></div></td>
 					</tr>
 				</table>
 				<div id="r4-m0-t0" class="champion"><p>Champions</p><img class=flag src=''><p class="countryName"></p></div>
@@ -407,7 +407,7 @@
 			Brazil2014.groups[g].load('------------');
 		});
 		$("#buttons").on('click', "#blankAll", function() {
-			Brazil2014.load('__');
+			Brazil2014.load('__+0');
 		});
 		$("#buttons").on('click', "#clearBracket", function() {
 			Brazil2014.knockout.clear();
